# MinVR_Old

./: CMakeLists.txt
apps/example/: CMakeLists.txt  desktop.xml  main.cpp
cmake/: AutoBuildLibWebSockets.cmake
cmake/Modules/: FindLibWebSockets.cmake
config/: CMakeLists.txt  VRDatum.h  desktop-haptics.minvr  desktop.minvr  web.minvr  websockets-server.minvr
contrib/plugins/GLFW/src/: GlfwInputDevice.cpp  GlfwInputDevice.h  GlfwPlugin.cpp  GlfwWindowFactory.cpp  GlfwWindowFactory.h
display/: CMakeLists.txt  README.md  VRDisplayNode.cpp  VRDisplayNode.h
display/factories/: VRCompositeDisplayFactory.cpp  VRCompositeDisplayFactory.h  VRDisplayFactory.h  VRTypedDisplayFactory.cpp  VRTypedDisplayFactory.h
display/nodes/console/: VRConsoleDisplay.cpp  VRConsoleDisplay.h
display/nodes/graphics/: VRGraphicsWindowNode.cpp  VRGraphicsWindowNode.h
display/nodes/graphics/camera/: VRLookAtCameraNode.cpp  VRLookAtCameraNode.h  VROffAxisCameraNode.cpp  VROffAxisCameraNode.h
display/nodes/graphics/stereo/: VRSideBySideNode.cpp  VRSideBySideNode.h  VRStereoNode.cpp  VRStereoNode.h
display/nodes/graphics/structure/: VRTile.cpp  VRTile.h  VRTileNode.cpp  VRTileNode.h  VRViewportNode.cpp  VRViewportNode.h
display/nodes/scope/: VRLeafRenderedNode.cpp  VRLeafRenderedNode.h  VRStateScopeNode.cpp  VRStateScopeNode.h
display/renderers/: VRRenderHandler.cpp  VRRenderHandler.h  VRRenderer.cpp  VRRenderer.h
display/renderers/concrete/: VRCallbackRenderer.cpp  VRCallbackRenderer.h
display/renderers/state/: VRGraphicsState.cpp  VRGraphicsState.h
examples/: CMakeLists.txt
examples/LeapMotionExample/: CMakeLists.txt  desktop.xml  main.cpp
examples/MinGraphicsExample/: main.cpp
examples/PythonExample/: cube.py  desktop.xml  example.py
examples/ShaderExample/: desktop.xml  main.cpp
examples/SimpleOpenGL/: ZSpace.xml  vrexample.cpp
main/: VRMain.cpp  VRMain.h
math/: VRMath.cpp  VRMath.h
plugins/: CMakeLists.txt
plugins/Cpp11/: CMakeLists.txt
plugins/Cpp11/src/: VRCpp11Plugin.cpp  VRCpp11ThreadToolkit.cpp  VRCpp11ThreadToolkit.h
plugins/GLFW/: CMakeLists.txt
plugins/GLFW/src/: VRGLFWInputDevice.cpp  VRGLFWInputDevice.h  VRGLFWWindowToolkit.cpp  VRGLFWWindowToolkit.h
plugins/GLFW_Affinity/: CMakeLists.txt
plugins/LeapMotion/: CMakeLists.txt  README.md
plugins/LeapMotion/cmake/: FindLeap.cmake
plugins/LeapMotion/src/: VRLeapMotionDevice.cpp  VRLeapMotionDevice.h  VRLeapMotionPlugin.cpp
plugins/OpenGL/: CMakeLists.txt
plugins/OpenGL/src/: VROpenGLGraphicsToolkit.cpp  VROpenGLPlugin.cpp  VRReadPixelsNode.cpp  VRReadPixelsNode.h
plugins/OpenHaptics/: CMakeLists.txt
plugins/OpenHaptics/src/: VROpenHapticsDevice.cpp  VROpenHapticsDevice.h  VROpenHapticsNode.cpp  VROpenHapticsNode.h  VROpenHapticsPlugin.cpp
plugins/OpenHaptics/src/HD/: VROpenHapticsDeviceHD.cpp  VROpenHapticsDeviceHD.h  VROpenHapticsNodeHD.cpp  VROpenHapticsNodeHD.h
plugins/OpenHaptics/src/HL/: VROpenHapticsDeviceHL.cpp  VROpenHapticsDeviceHL.h  VROpenHapticsNodeHL.cpp  VROpenHapticsNodeHL.h
plugins/OpenVR/src/: VROpenVRInputDevice.h
plugins/Pygame/: CMakeLists.txt
plugins/Pygame/src/: VRPygamePlugin.cpp
plugins/Pygame/src/python/MinVR_Pygame/: MinVR_Pygame.py  __init__.py
plugins/Python/: CMakeLists.txt
plugins/Python/src/: VRDataIndexPython.cpp  VRPython.cpp
plugins/Python/src/python/: MinVR.py
plugins/Python/src/python/MinVR/: MinVR.py
plugins/Sphinx/: CMakeLists.txt
plugins/Sphinx/src/: VRSphinxDevice.cpp  VRSphinxDevice.h  VRSphinxPlugin.cpp
plugins/Threading/: CMakeLists.txt
plugins/Threading/src/: VRRenderThreadAction.h  VRThreadGroup.cpp  VRThreadGroup.h  VRThreadingPlugin.cpp  VRWhileRenderingNode.cpp  VRWhileRenderingNode.h
plugins/VRPN/: CMakeLists.txt
plugins/VRPN/src/: VRVRPNTrackerDevice.cpp
plugins/WebSockets/: CMakeLists.txt  README.md
plugins/WebSockets/src/: VRWebSocket.cpp  VRWebSocket.h  VRWebSocketDevice.cpp  VRWebSocketDevice.h  VRWebSocketManager.cpp  VRWebSocketManager.h  VRWebSocketsInputDevice.cpp  VRWebSocketsInputDevice.h  VRWebSocketsNode.cpp  VRWebSocketsNode.h  VRWebSocketsPlugin.cpp  VRWebSocketsServer.cpp  VRWebSocketsServer.h
plugins/WebSockets/test/: index.html
plugins/sbdlog/: CMakeLists.txt
plugins/sbdlog/src/: VRspdlogLogger.cpp  VRspdlogLogger.h  VRspdlogPlugin.cpp
src/: CMakeLists.txt
src/api/: MinVR.h  VRApp.h  VRHapticsState.h
src/api/graphics/: VRApp.cpp  VRApp.h  VRGraphicsHandler.cpp  VRGraphicsHandler.h  VRGraphicsState.cpp  VRGraphicsState.h
src/api/impl/: VRApp.cpp  VRGraphicsHandler.cpp  VRGraphicsHandler.h  VRHapticsState.cpp
src/config/: VRDataIndex.cpp  VRDataIndex.h  VRDataQueue.cpp
src/display/: VRCallbackNode.cpp  VRCallbackNode.h  VRGraphicsRenderState.cpp  VRGraphicsRenderState.h  VRGraphicsToolkit.h  VRGraphicsWindowNode.cpp  VROffAxisProjectionNode.cpp  VRRenderHelper.cpp  VRRenderHelper.h  VRStereoNode.cpp  VRStereoNode.h  VRToolkit.h  VRTrackedLookAtNode.cpp  VRWindowToolkit.h
src/graphics/: VRGraphicsApp.cpp  VRGraphicsApp.h  VRGraphicsHandler.cpp  VRGraphicsHandler.h  VRGraphicsState.cpp  VRGraphicsState.h
src/log/: VRLogManager.cpp  VRLogManager.h  VRLogger.cpp  VRLogger.h
src/log/impl/: VRBasicLogger.cpp  VRBasicLogger.h  VROstreamLoggerStream.cpp  VROstreamLoggerStream.h
src/main/: VRAppLauncher.h  VRCallbackHandler.h  VRMain.cpp  VRMain.h  VRMainInterface.h  VRRenderHandler.h
src/main/impl/: VRDefaultAppLauncher.cpp  VRDefaultAppLauncher.h
src/math/: VRMath.cpp
src/plugin/: VRPlugin.h  VRPluginManager.cpp  VRSharedLibrary.cpp
src/threading/: VRConditionVariable.h  VRMutex.h  VRThread.h  VRThreadBarrier.cpp  VRThreadBarrier.h  VRThreadHandler.h  VRThreadToolkit.h
tests-interactive/opengl-mvc/: MyAppController.cpp  MyAppView.cpp  MyAppView.h  multithreaded.xml
tests-interactive/opengl-shaderpipeline-with-api/: CMakeLists.txt  main.cpp
tests-interactive/websockets/: CMakeLists.txt  index.html  main.cpp
